RESOLVED FIXED307364
REGRESSION(307076@main): [MacOS API Debug] TestWebKitAPI.WebTransport.Unidirectional is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=307364
Summary REGRESSION(307076@main): [MacOS API Debug] TestWebKitAPI.WebTransport.Unidire...
Diego De La Toba
Reported 2026-02-09 13:03:45 PST
TestWebKitAPI.WebTransport.Unidirectional is a constant timeout on MacOS Debug HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebTransport.Unidirectional BUILD URL: https://build.webkit.org/#/builders/1224/builds/4143 REPRODUCTION: I was able to reproduce on MacOS Arm Debug ToT with the following: run-api-tests --force --iterations 1 TestWebKitAPI.WebTransport.Unidirectional ASSERTION FAILED: m_suspendIfNeededWasCalled /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Source/WebCore/dom/ActiveDOMObject.cpp(108) : void WebCore::ActiveDOMObject::assertSuspendIfNeededWasCalled() const 1 0x305b0e414 WebCore::ActiveDOMObject::assertSuspendIfNeededWasCalled() const 2 0x305f1b358 WebCore::ScriptExecutionContext::checkConsistency() const 3 0x305f1d4e4 WebCore::ScriptExecutionContext::suspendActiveDOMObjects(WebCore::ReasonForSuspension) 4 0x305beb524 WebCore::Document::suspendActiveDOMObjects(WebCore::ReasonForSuspension) 5 0x305be89d4 WebCore::Document::suspendScheduledTasks(WebCore::ReasonForSuspension) 6 0x30715b258 WebCore::PageGroupLoadDeferrer::PageGroupLoadDeferrer(WebCore::Page&, bool) 7 0x30715b410 WebCore::PageGroupLoadDeferrer::PageGroupLoadDeferrer(WebCore::Page&, bool) 8 0x306eeea54 WebCore::Chrome::runJavaScriptAlert(WebCore::LocalFrame&, WTF::String const&) 9 0x3070351d8 WebCore::LocalDOMWindow::alert(WTF::String const&) 10 0x306f0e794 WebCore::DOMWindow::alert(WTF::String const&) 11 0x30130d560 WebCore::jsDOMWindowInstanceFunction_alert2Body(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*)::'lambda'()::operator()() const 12 0x30130d490 JSC::JSValue WebCore::toJS<WebCore::IDLUndefined, WebCore::jsDOMWindowInstanceFunction_alert2Body(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*)::'lambda'()>(JSC::JSGlobalObject&, JSC::ThrowScope&, WebCore::jsDOMWindowInstanceFunction_alert2Body(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*)::'lambda'()&&) 13 0x30130d320 WebCore::jsDOMWindowInstanceFunction_alert2Body(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*) 14 0x30130d0e0 WebCore::jsDOMWindowInstanceFunction_alertOverloadDispatcher(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*) 15 0x30130cee8 long long WebCore::IDLOperation<WebCore::JSDOMWindow>::call<&WebCore::jsDOMWindowInstanceFunction_alertOverloadDispatcher(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*), (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) 16 0x301301f50 WebCore::jsDOMWindowInstanceFunction_alert(JSC::JSGlobalObject*, JSC::CallFrame*) 17 0x13ebdc044 16 ??? 0x000000013ebdc044 0x0 + 5347590212 18 0x13ebd0068 17 ??? 0x000000013ebd0068 0x0 + 5347541096 19 0x13ebd0428 18 ??? 0x000000013ebd0428 0x0 + 5347542056 20 0x1344675ac JSC::JSValue JSC::callMicrotask<JSC::JSGenerator*, JSC::JSValue, JSC::JSValue, JSC::JSValue, JSC::JSValue>(JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSCell*, WTF::ASCIILiteral, JSC::JSGenerator*, JSC::JSValue, JSC::JSValue, JSC::JSValue, JSC::JSValue) 21 0x134463bac JSC::runInternalMicrotask(JSC::JSGlobalObject*, JSC::InternalMicrotask, unsigned char, std::__1::span<JSC::JSValue const, 3ul>) 22 0x305e61c9c WebCore::MicrotaskQueue::runJSMicrotask(JSC::JSGlobalObject*, JSC::VM&, JSC::QueuedTask&) 23 0x305e845cc WebCore::MicrotaskQueue::performMicrotaskCheckpoint()::$_0::operator()(JSC::QueuedTask&) const 24 0x305e622bc void JSC::MicrotaskQueue::performMicrotaskCheckpoint<false, WebCore::MicrotaskQueue::performMicrotaskCheckpoint()::$_0>(JSC::VM&, WebCore::MicrotaskQueue::performMicrotaskCheckpoint()::$_0 const&) 25 0x305e61ef8 WebCore::MicrotaskQueue::performMicrotaskCheckpoint() 26 0x305dd9488 WebCore::EventLoop::performMicrotaskCheckpoint() 27 0x305dda3d0 WebCore::EventLoop::run(std::__1::optional<WTF::ApproximateTime>) 28 0x30600c6fc WebCore::WindowEventLoop::didReachTimeToRun() 29 0x306010f3c WebCore::Timer::Timer<WebCore::WindowEventLoop, WebCore::WindowEventLoop>(WebCore::WindowEventLoop&, void (WebCore::WindowEventLoop::*)())::'lambda'()::operator()() const 30 0x306010d40 WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebCore::WindowEventLoop, WebCore::WindowEventLoop>(WebCore::WindowEventLoop&, void (WebCore::WindowEventLoop::*)())::'lambda'(), void>::call() 31 0x30003996c WTF::Function<void ()>::operator()() const
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-09 13:03:51 PST
Diego De La Toba
Comment 2 2026-02-09 13:18:06 PST
EWS
Comment 3 2026-02-09 13:20:16 PST
Test gardening commit 307101@main (e082d2becaaa): <https://commits.webkit.org/307101@main> Reviewed commits have been landed. Closing PR #58231 and removing active labels.
Jonathan Bedard
Comment 4 2026-02-09 13:42:45 PST
Likely 307076@main, specifically.
Jonathan Bedard
Comment 5 2026-02-09 13:58:07 PST
EWS
Comment 6 2026-02-09 23:24:09 PST
Committed 307149@main (073a367efb97): <https://commits.webkit.org/307149@main> Reviewed commits have been landed. Closing PR #58234 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.